--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
   },
   "homepage": "https://github.com/ghermeto/socket.io-kafka",
   "dependencies": {
-    "async": "^0.9.0",
     "debug": "^2.1.3",
-    "kafka-node": "^0.2.24",
-    "socket.io-adapter": "^0.3.1",
+    "no-kafka": "^3.2.0",
+    "socket.io-adapter": "^1.1.1",
     "uid2": "0.0.3"
   },
   "devDependencies": {
